# cppets

./: .gitignore  CMakeLists.txt  README.md
include/: cppets.hpp
src/: cppets.cpp
